Handle invalid input and storage failures safely
Invalid task details can corrupt saved records, and failed saves can
leave memory out of sync with disk. Loading errors also allow later
commands to overwrite data that could not be read.

Validate descriptions, task numbers, duplicate tasks, and event ranges.
Normalize command whitespace and report recoverable errors with guidance.
Save atomically before applying changes in memory, block saves after a
failed load, and detect external changes to the data file.

Document the validation and recovery rules and add regression coverage
for malformed data, denied access, and state preservation.

Verify with Java 25: 51 automated tests, 18 console UI cases, and both
main and test Checkstyle checks pass.